--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,14 @@
             });
         }
     </script>
+    <script type="text/javascript">
+        let useHtml = true;
+        if (useHtml) {
+            window.flutterWebRenderer = "html";
+        } else {
+            window.flutterWebRenderer = "canvaskit";
+        }
+    </script>
     <script src="main.dart.js" type="application/javascript"></script>
 </body>
 
