added conditional selection of web-renderer

--- a/web/index.html
+++ b/web/index.html
@@ -44,6 +44,9 @@
     </script>
     <script type="text/javascript">
         let useHtml = true;
+        if (window.location.url.endswith('canvaskit')) {
+            useHtml = false;
+        }
         if (useHtml) {
             window.flutterWebRenderer = "html";
         } else {
