fixed conditional rendering

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
     </script>
     <script type="text/javascript">
         let useHtml = true;
-        if (window.location.url.endswith('canvaskit')) {
+        if (window.location.href.endswith('canvaskit')) {
             useHtml = false;
         }
         if (useHtml) {
